--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "offload",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "offload CPU intensive tasks with a POST",
   "main": "index.js",
   "dependencies": {
-    "koa": "~0.6.1"
+    "koa": "~0.6.1",
+    "koa-router": "~3.1.4",
+    "debug": "~0.8.1",
+    "raw-body": "~1.1.6"
   },
   "devDependencies": {
-    "mocha": "~1.19.0"
+    "mocha": "~1.20.0",
+    "supertest": "~0.13.0",
+    "thunkify": "~2.1.2",
+    "should": "~4.0.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -21,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/socialtables/offload/issues"
   },
-  "homepage": "https://github.com/socialtables/offload"
+  "homepage": "https://github.com/socialtables/offload",
+  "directories": {
+    "test": "test"
+  }
 }
