--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "koa": "~0.6.1",
     "koa-router": "~3.1.4",
     "debug": "~0.8.1",
-    "raw-body": "~1.1.6"
+    "raw-body": "~1.1.6",
+    "thunkify": "~2.1.2"
   },
   "devDependencies": {
     "mocha": "~1.20.0",
